--- a/css/about.less
+++ b/css/about.less
@@ -1,11 +1,23 @@
 .editor-content{
+    &.p50{
+        border-bottom: none!important;
+    }
     &:last-child{
         border-bottom: none;
     }
     overflow: hidden;
     border-bottom: 2px solid #f0f0f0;
     padding-bottom: 50px;
-    &.pt50{padding-top: 50px}
+    &.pt50{
+        padding-top: 50px;
+        p span:nth-child(1){
+            width: 130px;
+            display: inline-block;
+        }
+        p span:nth-child(2){
+            display: inline-block;
+        }
+    }
     h4{
         font-size: 24px;
         color: #0a0425;
@@ -18,6 +30,11 @@
         line-height: 36px;
         margin-right: 100px;
         text-align: justify;
+        &.left{
+            width: 50%;
+            display: inline-block;
+            margin-right: 0;
+        }
     }
     ul.history{
         position: relative;
