--- a/css/screen.css
+++ b/css/screen.css
@@ -1,8 +1,8 @@
 @media (min-width: 1401px) {
-  .swiper-slide img.wap {
+  img.wap {
     display: none;
   }
-  .swiper-slide img.pc {
+  img.pc {
     display: block;
   }
   #header-common .wrap,
@@ -101,10 +101,10 @@
   }
 }
 @media (min-width: 1200px) {
-  .swiper-slide img.wap {
+  img.wap {
     display: none;
   }
-  .swiper-slide img.pc {
+  img.pc {
     display: block;
   }
   #header-common .wrap,
@@ -203,10 +203,10 @@
   }
 }
 @media (max-width: 1200px) {
-  .swiper-slide img.wap {
+  img.wap {
     display: none;
   }
-  .swiper-slide img.pc {
+  img.pc {
     display: block;
   }
   #header-common .wrap,
@@ -317,10 +317,10 @@
   }
 }
 @media (max-width: 991px) {
-  .swiper-slide img.wap {
+  img.wap {
     display: block;
   }
-  .swiper-slide img.pc {
+  img.pc {
     display: none;
   }
   #header-common .wrap,
@@ -367,7 +367,7 @@
     margin-top: 42px;
   }
   #header-common.navMainScroll .wrap .logo {
-    margin-top: 24px;
+    margin-top: 16px;
     transition: all ease-in 0.2s;
   }
   #header-common .wrap > .link {
@@ -387,7 +387,7 @@
     min-width: 140px;
   }
   #bottom .wrap > div:first-child {
-    margin-left: 40px;
+    margin-left: 20px;
   }
   #bottom .wrap .logo {
     display: none;
@@ -498,11 +498,11 @@
   }
 }
 @media (max-width: 768px) {
-  .swiper-slide img.wap {
-    display: none;
-  }
-  .swiper-slide img.pc {
+  img.wap {
     display: block;
+  }
+  img.pc {
+    display: none;
   }
   #header-common .wrap,
   #bottom .wrap,
@@ -510,6 +510,9 @@
   #header,
   .index-link {
     width: 100%;
+  }
+  #header-common .wrap {
+    height: 70px;
   }
   #header {
     margin-left: -51%;
@@ -546,7 +549,7 @@
     display: block;
     width: 100%;
     background: none;
-    border-bottom: 10px solid #e5e5e5;
+    border-bottom: 6px solid #e5e5e5;
   }
   .index-link li img {
     width: 100%;
@@ -575,6 +578,7 @@
     float: right;
     margin-top: 43px;
     display: none;
+    visibility: hidden;
   }
   #header-common .wrap > .link ul li {
     font-size: 16px;
@@ -592,33 +596,51 @@
     right: 26px;
     top: 26px;
   }
+  #header-common.navMainScroll .btn {
+    top: 15px;
+  }
+  #bottom {
+    background: #ecf0f1;
+    padding-top: 25px;
+  }
   #bottom .wrap > div {
     float: left;
-    min-width: 140px;
+    min-width: 100px;
     margin-left: 20px;
     overflow: hidden;
-    min-height: 220px;
+    min-height: 180px;
   }
   #bottom .wrap .logo {
     display: block;
     width: 100%;
     max-width: 100%;
     text-align: center;
-    margin-top: 0;
-    min-height: 120px;
+    margin-top: -30px;
+    min-height: 50px;
   }
   #bottom .wrap .logo img {
     width: 60%;
     margin: 0 auto;
     display: box;
   }
+  #bottom .wrap > div ul li > a {
+    line-height: 26px;
+  }
   #bottom .wrap > div ul .erweima {
     display: none;
   }
+  #bottom .wrap > div h4 {
+    font-size: 16px;
+    padding-bottom: 5px!important;
+  }
+  #bottom .wrap .poster p {
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
   body .content-right {
-    width: 80%;
+    width: 90%;
     float: left;
-    padding: 0 10%;
+    padding: 0 5%;
     left: 0;
   }
   body > .content > .nav {
@@ -645,19 +667,44 @@
   .editor-content.pt50 {
     padding-top: 20px;
   }
+  .editor-content.pt50 p span:nth-child(1) {
+    width: 130px;
+    display: inline-block;
+  }
+  .editor-content.pt50 p span:nth-child(2) {
+    display: inline-block;
+  }
   .editor-content p {
-    width: 100%;
+    width: 100%!important;
     font-size: 14px;
     color: #222222;
     line-height: 24px;
     margin-right: 100px;
     text-align: justify;
+    margin-top: 4px;
+  }
+  .editor-content .success p {
+    color: #fff;
+    text-align: center;
+    font-size: 18px;
+  }
+  .editor-content img {
+    margin-left: 0!important;
+  }
+  .editor-content ul.history li .item-content p {
+    line-height: 24px;
+    font-size: 14px;
+    display: table;
+    text-align: left;
+  }
+  .editor-content ul.history li .item-content p span:nth-child(2) {
+    padding-left: 20px;
   }
   .editor-content ul.history li > span {
     color: #131313;
     font-size: 16px;
     font-weight: bold;
-    line-height: 60px;
+    line-height: 52px;
     background: #fff;
     position: absolute;
     display: inline-block;
@@ -700,15 +747,21 @@
     overflow: hidden;
     padding: 20px 0;
   }
+  #footer .wrap .copyright-wrap ul {
+    float: none;
+    overflow: hidden;
+  }
   #footer .wrap .copyright-wrap ul li a {
     font-size: 12px!important;
   }
   #footer .wrap .copyright-wrap p {
-    float: right;
+    float: none;
+    display: block;
     color: #747b81;
     font-size: 12px!important;
-    margin-right: 20px;
+    margin-right: 0px;
     margin-top: 10px;
+    text-align: center;
   }
   .editor-content .case {
     margin-top: 20px;
@@ -724,11 +777,19 @@
     -webkit-line-clamp: 200;
     -webkit-box-orient: vertical;
   }
+  .editor-content .success {
+    background: #2454a3;
+    height: 300px;
+    overflow: hidden;
+  }
+  .editor-content .success i {
+    margin-top: 50px;
+  }
   .editor-content .net ul li {
     width: 100%;
     float: left;
     text-indent: 0px;
-    line-height: 46px;
+    line-height: 30px;
     font-size: 14px;
   }
   .editor-content .net ul li i {
@@ -786,7 +847,7 @@
   }
   .editor-content ul li {
     font-size: 16px;
-    line-height: 50px;
+    line-height: 36px;
   }
   .editor-content ul {
     margin-top: 0px;
