--- a/css/screen.less
+++ b/css/screen.less
@@ -1,5 +1,5 @@
 @media (min-width: 1401px){
-    .swiper-slide img{
+    img{
         &.wap{
             display: none;
         }
@@ -102,7 +102,7 @@
     }
 }
 @media (min-width: 1200px){
-    .swiper-slide img{
+    img{
         &.wap{
             display: none;
         }
@@ -205,7 +205,7 @@
     }
 }
 @media (max-width: 1200px){
-    .swiper-slide img{
+    img{
         &.wap{
             display: none;
         }
@@ -319,7 +319,7 @@
     }
 }
 @media (max-width: 991px){
-    .swiper-slide img{
+    img{
         &.wap{
             display: block;
         }
@@ -367,7 +367,7 @@
         margin-top: 42px;
     }
     #header-common.navMainScroll .wrap .logo {
-        margin-top: 24px;
+        margin-top: 16px;
         transition: all ease-in 0.2s;
     }
     #header-common .wrap > .link {
@@ -386,7 +386,7 @@
         float: left;
         min-width: 140px;
         &:first-child{
-            margin-left: 40px;
+            margin-left: 20px;
         }
     }
     #bottom .wrap .logo {
@@ -501,16 +501,20 @@
 }
 // 768
 @media (max-width: 768px){
-    .swiper-slide img{
+    img{
         &.wap{
-            display: none;
+            display: block;
         }
         &.pc{
-            display: block;
+            display: none;
         }
     }
     #header-common .wrap,#bottom .wrap,#footer .wrap,#header,.index-link {
         width: 100%;
+        
+    }
+    #header-common .wrap{
+        height: 70px;
     }
     #header{
         margin-left: -51%;
@@ -547,7 +551,7 @@
         display: block;
         width: 100%;
         background: none;
-        border-bottom: 10px solid #e5e5e5;
+        border-bottom: 6px solid #e5e5e5;
         img{
             width: 100%;
         }
@@ -576,6 +580,7 @@
         float: right;
         margin-top: 43px;
         display: none;
+        visibility:hidden;
     }
     #header-common .wrap > .link ul li {
         font-size: 16px;
@@ -592,34 +597,55 @@
         position: absolute;
         right: 26px;
         top: 26px;
+        // transition: all ease-in .2s;
+    }
+    #header-common.navMainScroll .btn{
+        top: 15px;
+        // transition: all ease-in .2s;
+    }
+    #bottom {
+        background: #ecf0f1;
+        padding-top: 25px;
     }
     #bottom .wrap > div {
         float: left;
-        min-width: 140px;
+        min-width: 100px;
         margin-left: 20px;
         overflow: hidden;
-        min-height: 220px;
+        min-height: 180px;
     }
     #bottom .wrap .logo {
         display: block;
         width: 100%;
         max-width:100%;
         text-align: center;
-        margin-top: 0;
-        min-height: 120px;
+        margin-top: -30px;
+        min-height: 50px;
         img{
             width: 60%;
             margin: 0 auto;
             display: box;
         } 
     }
+    #bottom .wrap > div ul li > a {
+        line-height: 26px;
+    }
     #bottom .wrap > div ul .erweima {
         display: none;
     }
+    #bottom .wrap > div h4 {
+        font-size: 16px;
+        padding-bottom: 5px!important;
+    }
+    #bottom .wrap .poster p{
+        font-size: 14px;
+        margin-bottom: 10px;
+    }
+    
     body .content-right{
-        width: 80%;
+        width: 90%;
         float: left;
-        padding: 0 10%;
+        padding: 0 5%;
         left: 0;
     }
     body > .content > .nav {
@@ -642,22 +668,48 @@
         color: #0a0425;
         line-height: 60px;
     }
+    
     .editor-content.pt50 {
         padding-top: 20px;
+        p span:nth-child(1){
+            width: 130px;
+            display: inline-block;
+        }
+        p span:nth-child(2){
+            display: inline-block;
+        }
     }
     .editor-content p {
-        width: 100%;
+        width: 100%!important;
         font-size: 14px;
         color: #222222;
         line-height: 24px;
         margin-right: 100px;
         text-align: justify;
+        margin-top: 4px;
+    }
+    .editor-content .success p {
+        color: #fff;
+        text-align: center;
+        font-size: 18px;
+    }
+    .editor-content img{
+        margin-left: 0!important;
+    }
+    .editor-content ul.history li .item-content p {
+        line-height: 24px;
+        font-size: 14px;
+        display: table;
+        text-align: left;
+    }
+    .editor-content ul.history li .item-content p span:nth-child(2) {
+        padding-left: 20px;
     }
     .editor-content ul.history li > span {
         color: #131313;
         font-size: 16px;
         font-weight: bold;
-        line-height: 60px;
+        line-height: 52px;
         background: #fff;
         position: absolute;
         display: inline-block;
@@ -699,15 +751,21 @@
         overflow: hidden;
         padding: 20px 0;
     }
+    #footer .wrap .copyright-wrap ul{
+        float: none;
+        overflow: hidden;
+    }
     #footer .wrap .copyright-wrap ul li a {
         font-size: 12px!important;
     }
     #footer .wrap .copyright-wrap p {
-        float: right;
+        float: none;
+        display: block;
         color: #747b81;
         font-size: 12px!important;
-        margin-right: 20px;
+        margin-right: 0px;
         margin-top: 10px;
+        text-align: center;
     }
     // business
     .editor-content .case {
@@ -725,11 +783,19 @@
         -webkit-box-orient: vertical;
     }
     // contact-us
+    .editor-content .success {
+        background: #2454a3;
+        height: 300px;
+        overflow: hidden;
+    }
+    .editor-content .success i {
+        margin-top: 50px;
+    }
     .editor-content .net ul li {
         width: 100%;
         float: left;
         text-indent: 0px;
-        line-height: 46px;
+        line-height: 30px;
         font-size: 14px;
         i{
             margin-right: 10px;
@@ -788,7 +854,7 @@
     }
     .editor-content ul li {
         font-size: 16px;
-        line-height: 50px;
+        line-height: 36px;
     }
     .editor-content ul {
         margin-top: 0px;
