--- a/css/common.css
+++ b/css/common.css
@@ -44,7 +44,7 @@
 #header-common .wrap > .link ul li a {
   margin: 0 40px;
   color: #fff;
-  font-weight: bold;
+  font-weight: normal;
   text-decoration: none;
 }
 #header-common .wrap > .link ul li:first-child {
@@ -136,7 +136,8 @@ body .content-right {
   position: relative;
   left: 230px;
 }
-body .content-right a.anchor {
+body .content-right a.anchor,
+body .content-right div.anchor {
   display: block;
   position: relative;
   top: -80px;
