--- a/css/common.less
+++ b/css/common.less
@@ -42,7 +42,7 @@
                     a{
                         margin: 0 40px;
                         color: #fff;
-                        font-weight: bold;
+                        font-weight: normal;
                         text-decoration: none;
                         
                     }
@@ -142,7 +142,7 @@ body .content-right {
     float: right;
     position: relative;
     left: 230px;
-    a.anchor{
+    a.anchor,div.anchor{
         display: block;
         position: relative;
         top: -80px;
