--- a/css/reset.css
+++ b/css/reset.css
@@ -2,7 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-html{font-family: PingFangSC-Regular,Helvetica,"Microsoft YaHei","Droid Sans",Arial,sans-serif;}
+html{font-family: PingFangSC-Regular,Helvetica,"Microsoft YaHei","Droid Sans",Arial,sans-serif!important;}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
