--- a/css/index.css
+++ b/css/index.css
@@ -73,7 +73,8 @@
   width: 100px!important;
 }
 .swiper-pagination-bullet {
-  width: 8px;
+  width: 4px;
+  padding: 0 2px;
   height: 8px;
   display: inline-block;
   border-radius: 4px;
