--- a/css/screen.less
+++ b/css/screen.less
@@ -908,4 +908,49 @@
         max-width: 100px;
         min-width: 100px;
     }
+    .toutiao {
+        margin-left: 0px;
+    }
+    .news-list{
+        margin-left: 0;
+    }
+    .news-list li dl dd h3 {
+        font-size: 14px;
+        line-height: 32px;
+        overflow: hidden;
+        text-overflow:ellipsis;
+        white-space: nowrap;
+        width: 260px;
+    }
+    .news-list li dl dd p {
+        color: #999999;
+        font-size: 12px;
+        margin-top: 10px;
+    }
+    .news-list li dl dd {
+        padding: 0px 10px;
+    }
+    .news-list li {
+        padding: 10px 0;
+        border-bottom: 1px dashed #ccc;
+    }
+    .toutiao dl {
+        padding-bottom: 10px;
+        dt{
+            width: 100%;
+        }
+        dd{
+            width: 100%;
+            a{
+                text-align: center
+            }
+        }
+    }
+    .toutiao h1 {
+        color: #333;
+        text-decoration: none;
+        overflow: hidden;
+        text-overflow:ellipsis;
+        white-space: nowrap;
+    }
 }
