--- a/css/news.less
+++ b/css/news.less
@@ -10,6 +10,13 @@
         font-size: 24px;
         color: #0a0425;
         line-height: 80px;
+        a{
+            float: right;
+            font-size: 20px;
+            line-height: 80px;
+            color: #00c4f2;
+            text-decoration: none;
+        }
     }
     p{
         width: 100%;
@@ -75,3 +82,195 @@
         }
     }
 }
+.toutiao{
+    margin-left: 60px;
+    h1{
+        font-size: 20px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        line-height: 40px;
+        a{
+            color: #333;
+            text-decoration: none;
+            &:hover{
+                color: #00c4f2;
+            }
+        }
+    }
+    p{
+        font-size: 16px;
+        color: #ababab;
+        line-height: 50px;
+        span{
+            margin-left: 10px;
+        }
+    }
+    dl{
+        padding-bottom: 20px;
+        border-bottom: 1px dashed #ccc;
+        dt{
+            width: 40%;
+            float: left;
+            img{
+                width: 100%;
+            }
+        }
+        dd{
+            width: 56%;
+            float: right;
+            line-height: 26px;
+            a{
+                display: block;
+                color: #00c4f2;
+                line-height: 40px;
+                text-decoration: none;
+            }
+        }
+    }
+}
+.news-list{
+    margin-left: 60px;
+    li{
+        &:hover{
+            background: #f1f1f1;
+        }
+        padding: 30px 0;
+        border-bottom: 1px dashed #ccc;
+        &>a{
+            color: #333;
+            text-decoration: none;
+        }
+        dl{
+            display: flex;
+            dt{
+                width: 200px;
+                float: left;
+                img{
+                    width: 100%;
+                }
+            }
+            dd{
+                padding: 10px 20px;
+                h3{
+                    font-size: 20px;
+                    line-height: 60px;
+                    span{
+                        color: #ea0a4c;
+                        margin-right: 6px;
+                    }
+                }
+                p{
+                    color: #999999;
+                    font-size: 14px;
+                    span{
+                        margin-right: 10px;
+                    }
+                }
+            }
+        }
+    }
+}
+.clearfix:after {
+    content:""; 
+    display: block; 
+    clear:both; 
+ }
+
+ #pages{
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+ }
+ .pagination {
+    display: inline-block;
+    padding-left: 0;
+    margin: 20px 0;
+    border-radius: 4px;
+  }
+  .pagination > li {
+    display: inline;
+  }
+  .pagination > li > a,
+  .pagination > li > span {
+    position: relative;
+    float: left;
+    padding: 8px 18px;
+    margin-left: -1px;
+    line-height: 1.428571429;
+    color: #428bca;
+    text-decoration: none;
+    background-color: #fff;
+    border: 1px solid #ddd;
+  }
+  .pagination > li:first-child > a,
+  .pagination > li:first-child > span {
+    margin-left: 0;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+  }
+  .pagination > li:last-child > a,
+  .pagination > li:last-child > span {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+  }
+  .pagination > li > a:hover,
+  .pagination > li > span:hover,
+  .pagination > li > a:focus,
+  .pagination > li > span:focus {
+    color: #2a6496;
+    background-color: #eee;
+    border-color: #ddd;
+  }
+  .pagination > .active > a,
+  .pagination > .active > span,
+  .pagination > .active > a:hover,
+  .pagination > .active > span:hover,
+  .pagination > .active > a:focus,
+  .pagination > .active > span:focus {
+    z-index: 2;
+    color: #fff;
+    cursor: default;
+    background-color: #151346;
+    border-color: #151346;
+  }
+  .pagination > .disabled > span,
+  .pagination > .disabled > span:hover,
+  .pagination > .disabled > span:focus,
+  .pagination > .disabled > a,
+  .pagination > .disabled > a:hover,
+  .pagination > .disabled > a:focus {
+    color: #999;
+    cursor: not-allowed;
+    background-color: #fff;
+    border-color: #ddd;
+  }
+  .pagination-lg > li > a,
+  .pagination-lg > li > span {
+    padding: 10px 16px;
+    font-size: 18px;
+  }
+  .pagination-lg > li:first-child > a,
+  .pagination-lg > li:first-child > span {
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+  }
+  .pagination-lg > li:last-child > a,
+  .pagination-lg > li:last-child > span {
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+  }
+  .pagination-sm > li > a,
+  .pagination-sm > li > span {
+    padding: 5px 10px;
+    font-size: 12px;
+  }
+  .pagination-sm > li:first-child > a,
+  .pagination-sm > li:first-child > span {
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+  }
+  .pagination-sm > li:last-child > a,
+  .pagination-sm > li:last-child > span {
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+  }
