--- a/css/common.less
+++ b/css/common.less
@@ -197,6 +197,7 @@ body .content-right {
                         font-size: 14px;
                         text-indent: 10px;
                         span{
+                            cursor: pointer;
                             display: block;
                             position: absolute;
                             right: 0;
