--- a/css/screen.less
+++ b/css/screen.less
@@ -294,7 +294,7 @@
     .editor-content .board ul li:nth-child(1),.editor-content .board ul li:nth-child(2),.editor-content .board ul li:nth-child(3){
         margin-right: 16px;
     }
-    .editor-content .board ul li input[type="text"] {
+    .editor-content .board ul li input[type="text"],.editor-content .board ul li input[type="number"] {
         width: 100%;
         background: #fff;
         border-radius: 6px;
@@ -478,7 +478,7 @@
     .editor-content .board ul li {
         display: block;
     }
-    .editor-content .board ul li input[type="text"] {
+    .editor-content .board ul li input[type="text"],.editor-content .board ul li input[type="number"] {
         width: 100%;
         background: #fff;
         border-radius: 6px;
@@ -623,7 +623,7 @@
         float: left;
         min-width: 100px;
         margin-left: 20px;
-        overflow: hidden;
+        // overflow: hidden;
         min-height: 180px;
     }
     #bottom .wrap .logo {
@@ -644,6 +644,8 @@
     }
     #bottom .wrap > div ul .erweima {
         display: none;
+        left: -20px;
+        top: 30px;
     }
     #bottom .wrap > div h4 {
         font-size: 16px;
@@ -829,7 +831,7 @@
         width: 48%;
         margin-right: 0;
     }
-    .editor-content .board ul li input[type="text"] {
+    .editor-content .board ul li input[type="text"],.editor-content .board ul li input[type="number"] {
         width: 100%;
         background: #fff;
         border-radius: 6px;
