--- a/css/screen.css
+++ b/css/screen.css
@@ -297,7 +297,8 @@
   .editor-content .board ul li:nth-child(3) {
     margin-right: 16px;
   }
-  .editor-content .board ul li input[type="text"] {
+  .editor-content .board ul li input[type="text"],
+  .editor-content .board ul li input[type="number"] {
     width: 100%;
     background: #fff;
     border-radius: 6px;
@@ -481,7 +482,8 @@
   .editor-content .board ul li {
     display: block;
   }
-  .editor-content .board ul li input[type="text"] {
+  .editor-content .board ul li input[type="text"],
+  .editor-content .board ul li input[type="number"] {
     width: 100%;
     background: #fff;
     border-radius: 6px;
@@ -623,7 +625,6 @@
     float: left;
     min-width: 100px;
     margin-left: 20px;
-    overflow: hidden;
     min-height: 180px;
   }
   #bottom .wrap .logo {
@@ -644,6 +645,8 @@
   }
   #bottom .wrap > div ul .erweima {
     display: none;
+    left: -20px;
+    top: 30px;
   }
   #bottom .wrap > div h4 {
     font-size: 16px;
@@ -827,7 +830,8 @@
     width: 48%;
     margin-right: 0;
   }
-  .editor-content .board ul li input[type="text"] {
+  .editor-content .board ul li input[type="text"],
+  .editor-content .board ul li input[type="number"] {
     width: 100%;
     background: #fff;
     border-radius: 6px;
