--- a/css/screen.less
+++ b/css/screen.less
@@ -67,7 +67,7 @@
     .editor-content .board ul li {
         float: left;
     }
-    .editor-content .board ul li input[type="text"] {
+    .editor-content .board ul li input[type="text"],.editor-content .board ul li input[type="number"] {
         width: 130px;
         background: #fff;
         border-radius: 6px;
@@ -173,7 +173,7 @@
     .editor-content .board ul li:nth-child(1),.editor-content .board ul li:nth-child(2),.editor-content .board ul li:nth-child(3){
         margin-right: 36px;
     }
-    .editor-content .board ul li input[type="text"] {
+    .editor-content .board ul li input[type="text"],.editor-content .board ul li input[type="number"] {
         background: #fff;
         border-radius: 6px;
         border: none;
@@ -686,7 +686,7 @@
     .editor-content.pt50 {
         padding-top: 20px;
         p span:nth-child(1){
-            width: 130px;
+            width: 100px;
             display: inline-block;
         }
         p span:nth-child(2){
