--- a/css/common.css
+++ b/css/common.css
@@ -103,6 +103,7 @@ body > .content.activated {
   margin: 80px auto 0;
   overflow: hidden;
   transition: all ease-in 0.2s;
+  padding-bottom: 80px;
 }
 body > .content > .nav {
   width: 230px;
