--- a/css/business.less
+++ b/css/business.less
@@ -31,11 +31,16 @@
         flex-direction: row-reverse;
       }
       dt {
-        float: left;
+        display: inline-block;
+        width: 35%;
+        overflow: hidden;
       }
       dd {
         padding: 20px;
-        float: right;
+        box-sizing: border-box;
+        display: inline-block;
+        width: 65%;
+        overflow: hidden;
         p {
           font-size: 12px;
           color: #222222;
