--- a/css/contact-us.less
+++ b/css/contact-us.less
@@ -33,6 +33,10 @@
                 &.request{
                     width: 100%;
                 }
+                input{
+                    border:1px solid #fff;
+                    box-sizing: border-box;
+                }
                 label{
                     display: block;
                     line-height: 40px;
