--- a/css/common.less
+++ b/css/common.less
@@ -343,3 +343,9 @@ body .content-right {
     transition: all ease-in 0.2s;
   }
 }
+
+.error{
+  border: 1px #f30 solid!important;
+  color: #f30;
+  box-sizing: border-box;
+}
