--- a/css/about.less
+++ b/css/about.less
@@ -31,10 +31,15 @@
         margin-right: 100px;
         text-align: justify;
         &.left{
-            width: 50%;
+            width: 58%;
             display: inline-block;
             margin-right: 0;
         }
+        
+    }
+    span.right{
+        float: right;
+        width: 42%;
     }
     ul.history{
         position: relative;
