--- a/css/news-detail.less
+++ b/css/news-detail.less
@@ -10,6 +10,13 @@
         font-size: 24px;
         color: #0a0425;
         line-height: 80px;
+        a{
+            color: #0a0425;
+            text-decoration: nonoe;
+            &:hover{
+                text-decoration: underline;
+            }
+        }
     }
     p{
         width: 100%;
@@ -51,7 +58,7 @@
         padding: 30px 0;
     }
     p img{
-        display: table-cell;
+        // display: table-cell;
         margin: 20px auto;
     }
 }
