--- a/css/common.less
+++ b/css/common.less
@@ -225,11 +225,13 @@ body .content-right {
       h4 {
         padding-bottom: 10px;
       }
-      p {
+      p,a {
         font-size: 18px;
         font-weight: bold;
         color: #747b81;
         margin-bottom: 20px;
+        text-decoration: none;
+        display: block;
       }
     }
     .logo {
