--- a/css/screen.css
+++ b/css/screen.css
@@ -178,6 +178,8 @@
   }
   .editor-content .board ul li {
     display: block;
+    float: left;
+    width: 130px;
   }
   .editor-content .board ul li:nth-child(1),
   .editor-content .board ul li:nth-child(2),
@@ -192,6 +194,8 @@
     padding: 16px;
     font-size: 16px;
     box-sizing: border-box;
+    display: block;
+    width: 100%;
   }
   .editor-content .board ul li.request input[type='text'] {
     width: 100%;
@@ -247,7 +251,7 @@
     min-width: 140px;
   }
   #bottom .wrap .logo {
-    max-width: 120px;
+    max-width: 220px;
   }
   #bottom .wrap .logo img {
     max-width: 100%;
@@ -413,14 +417,14 @@
   }
   #bottom .wrap > div {
     float: left;
-    min-width: 140px;
+    min-width: 120px;
   }
   #bottom .wrap > div:first-child {
     margin-left: 20px;
   }
   #bottom .wrap .logo {
-    display: none;
-    max-width: 120px;
+    max-width: 180px;
+    margin-right: 40px;
   }
   #bottom .wrap .logo img {
     max-width: 100%;
@@ -482,6 +486,11 @@
     -webkit-line-clamp: 200;
     -webkit-box-orient: vertical;
   }
+  .editor-content .board ul li:nth-child(1),
+  .editor-content .board ul li:nth-child(2),
+  .editor-content .board ul li:nth-child(3) {
+    margin-right: 4%;
+  }
   .editor-content .net ul li {
     width: 50%;
     float: left;
@@ -493,6 +502,8 @@
   }
   .editor-content .board ul li {
     display: block;
+    width: 22%;
+    float: left;
   }
   .editor-content .board ul li input[type='text'],
   .editor-content .board ul li input[type='number'] {
@@ -512,12 +523,12 @@
     padding: 14px 80px;
     color: #fff;
     font-size: 20px;
-    width: 100%;
+    width: 240px;
     background: #00c4f2;
     border: none;
     margin-top: 30px;
     overflow: hidden;
-    border-radius: 6px;
+    border-radius: 25px;
   }
   .editor-content .new-box .img-wrap img {
     max-width: 340px;
@@ -657,7 +668,7 @@
   }
   #bottom .wrap > div ul .erweima {
     display: none;
-    left: -20px;
+    left: -25px;
     top: 30px;
   }
   #bottom .wrap > div h4 {
@@ -713,6 +724,9 @@
     margin-right: 100px;
     text-align: justify;
     margin-top: 4px;
+  }
+  .editor-content span.right {
+    width: 100%;
   }
   .editor-content .success p {
     color: #fff;
@@ -920,6 +934,7 @@
   .editor-content .uniao-store li img {
     max-width: 100px;
     min-width: 100px;
+    display: inline;
   }
   .toutiao {
     margin-left: 0px;
@@ -965,5 +980,19 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+  }
+}
+@media (max-width: 375px) {
+  #bottom .wrap > div ul .erweima {
+    display: none;
+    left: -50px;
+    top: 30px;
+  }
+}
+@media (max-width: 320px) {
+  #bottom .wrap > div ul .erweima {
+    display: none;
+    left: 20px;
+    top: 30px;
   }
 }
