--- a/css/uniao-store.less
+++ b/css/uniao-store.less
@@ -10,6 +10,13 @@
         font-size: 24px;
         color: #0a0425;
         line-height: 80px;
+        a{
+            color: #0a0425;
+            text-decoration: none;
+            &:hover{
+                text-decoration: underline;
+            }
+        }
     }
     p{
         width: 100%;
