--- a/css/screen.css
+++ b/css/screen.css
@@ -657,6 +657,7 @@
     text-align: center;
     margin-top: -30px;
     min-height: 50px;
+    margin-right: 0;
   }
   #bottom .wrap .logo img {
     width: 60%;
