--- a/css/screen.less
+++ b/css/screen.less
@@ -683,6 +683,7 @@
     text-align: center;
     margin-top: -30px;
     min-height: 50px;
+    margin-right: 0;
     img {
       width: 60%;
       margin: 0 auto;
